tests/miniJava/neg/000209_mutation.MiniJava
class java { public static this void Main ( String [ ] java ) { { } } }
